--- a/src/docker-compose.yaml
+++ b/src/docker-compose.yaml
@@ -10,6 +10,12 @@ services:
       - ./transaction_service:/go/src/transaction_service
     build: ./transaction_service
     ports:
-      - "8080:8080"
+      - "8888:8888"
 
-
+  qoute_server_mock:
+    working_dir: /go/src/quote_server_mock
+    volumes: 
+      - ./quote_server_mock:/go/src/quote_server_mock
+    build: ./quote_server_mock
+    ports:
+      - "8000:8000"
