added dockerfiles for each piece

--- a/docker/transactionserver/Dockerfile
+++ b/docker/transactionserver/Dockerfile
@@ -2,16 +2,19 @@
 # and a workspace (GOPATH) configured at /go.
 FROM golang
 
+WORKDIR /go/src/app
+
+
 # Copy the local package files to the container's workspace.
-ADD . /go/src/github.com/golang/example/outyet
+ADD . .
 
-# Build the outyet command inside the container.
-# (You may fetch or manage dependencies here,
-# either manually or with a tool like "godep".)
-RUN go install github.com/golang/example/outyet
+RUN go get -v -u github.com/gorilla/mux
+RUN go get -v -u github.com/lib/pq
 
-# Run the outyet command by default when the container starts.
-ENTRYPOINT /go/bin/outyet
+RUN go build app.go
 
-# Document that the service listens on port 8080.
-EXPOSE 8080
+EXPOSE 8000
+EXPOSE 5432
+EXPOSE 4445
+EXPOSE 8888
+ENTRYPOINT ["./app"]
