--- a/src/docker-compose.yaml
+++ b/src/docker-compose.yaml
@@ -4,24 +4,27 @@ services:
   db:
     image: postgres:9.5
     volumes:
-      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
+     - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5432:5432"
 
   transaction:
     working_dir: /go/src/transaction_service
-    volumes: 
-      - ./transaction_service:/go/src/transaction_service
+    links:
+        - db:db
+        - quote_server_mock:quote_server_mock
+    #volumes: 
+     # - ./transaction_service:/go/src/transaction_service
     build: ./transaction_service
     ports:
       - "8888:8888"
     env_file:
       - vars.env
 
-  qoute_server_mock:
+  quote_server_mock:
     working_dir: /go/src/quote_server_mock
-    volumes: 
-      - ./quote_server_mock:/go/src/quote_server_mock
+    #volumes: 
+     # - ./quote_server_mock:/go/src/quote_server_mock
     build: ./quote_server_mock
     env_file:
       - vars.env
