--- a/src/docker-compose.yaml
+++ b/src/docker-compose.yaml
@@ -8,22 +8,27 @@ services:
     ports:
       - "5432:5432"
 
-  transaction:
-    working_dir: /go/src/transaction_service
-    volumes: 
-      - ./transaction_service:/go/src/transaction_service
-    build: ./transaction_service
-    ports:
-      - "8888:8888"
-    env_file:
-      - vars.env
-
-  qoute_server_mock:
-    working_dir: /go/src/quote_server_mock
-    volumes: 
+  quote_server_mock:
+    volumes:
       - ./quote_server_mock:/go/src/quote_server_mock
+    working_dir: /go/src/quote_server_mock
     build: ./quote_server_mock
     env_file:
       - vars.env
     ports:
       - "8000:8000"
+
+  transaction:
+    volumes:
+      - ./transaction_service:/go/src/transaction_service
+    working_dir: /go/src/transaction_service
+    build: ./transaction_service
+    env_file:
+      - vars.env
+    ports:
+      - "8888:8888"
+    links:
+        - db:database
+        - quote_server_mock:quote_server_mock
+
+
