--- a/src/vars.env
+++ b/src/vars.env
@@ -1,4 +1,5 @@
-POSTGRES_USER=seng468
-POSTGRES_PASSWORD=SENG$^*
+POSTGRES_HOST=database
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
 POSTGRES_DB=transactions
 DB_PORT=5432
