--- a/src/docker-compose.yaml
+++ b/src/docker-compose.yaml
@@ -23,6 +23,9 @@ services:
     ports:
       - "8000:8000"
 
+    environment:
+      - QUOTE_SERVER_PORT=8000
+
 
   transaction:
 
@@ -38,7 +41,7 @@ services:
 
     links:
         - db:database
-        - quote_server_mock:quote_server_mock
+        - quote_server_mock:quoteserver
 
     environment:
       - POSTGRES_HOST=database
@@ -46,4 +49,6 @@ services:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=transactions
       - DB_PORT=5432
+      - QUOTE_SERVER_HOST=quoteserver
+      - QUOTE_SERVER_PORT=8000
 
