--- a/src/docker-compose.yaml
+++ b/src/docker-compose.yaml
@@ -14,11 +14,13 @@ services:
 
   quote_server_mock:
     volumes:
-      - ./quote_server_mock:/go/src/quote_server_mock_dev
+      - ./quote_server_mock:/go/src/quote_server_mock
 
-    working_dir: /go/src/quote_server_mock_dev
+    working_dir: /go/src/quote_server_mock
 
     build: ./quote_server_mock
+
+    entrypoint: go run app.go
 
     ports:
       - "8000:8000"
@@ -30,9 +32,9 @@ services:
   transaction:
 
     volumes:
-      - ./transaction_service:/go/src/transaction_service_dev
+      - ./transaction_service:/go/src/transaction_service
 
-    working_dir: /go/src/transaction_service_dev
+    working_dir: /go/src/transaction_service
 
     build: ./transaction_service
 
@@ -43,6 +45,8 @@ services:
         - db:database
         - quote_server_mock:quoteserver
 
+    entrypoint: go run app.go
+
     environment:
       - POSTGRES_HOST=database
       - POSTGRES_USER=postgres
@@ -52,28 +56,3 @@ services:
       - QUOTE_SERVER_HOST=quoteserver
       - QUOTE_SERVER_PORT=8000
 
-
-  test:
-    volumes:
-      - ./test:/go/src/test_dev
-
-    working_dir: /go/src/test_dev
-
-    build: ./test
-
-    links:
-        - transaction:transaction
-        - quote_server_mock:quoteserver
-
-    depends_on:
-      - transaction
-
-    environment:
-      - TRANS_HOST=transaction
-      - TRANS_PORT=8888
-      - QUOTE_SERVER_HOST=quoteserver
-      - QUOTE_SERVER_PORT=8000
-  
-    entrypoint:  bash -c "while ! ping -c 1 -n -w 1 transaction:8888 &> /dev/null; do echo sleeping; sleep 1; done; echo Connected!; go test ./...;"
-    
-  
