--- a/src/test/Dockerfile
+++ b/src/test/Dockerfile
@@ -4,6 +4,6 @@ COPY . /go/src/test
 WORKDIR /go/src/test
 
 RUN go get github.com/gavv/httpexpect
-RUN go get ./...
+RUN go get -d ./...
 
 ENTRYPOINT ["go", "test", "./..."]
