--- a/src/test/Dockerfile
+++ b/src/test/Dockerfile
@@ -6,4 +6,4 @@ WORKDIR /go/src/test
 RUN go get github.com/gavv/httpexpect
 RUN go get -d ./...
 
-ENTRYPOINT ["go", "test", "./..."]
+ENTRYPOINT ["go", "test", "."]
