--- a/src/docker-compose.yaml
+++ b/src/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3'
+version: '2'
 
 services:
   test:
@@ -26,7 +26,7 @@ services:
     build: ./postgres
 
     volumes:
-      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
 
     ports:
       - "5432:5432"
