--- a/src/docker-compose.yaml
+++ b/src/docker-compose.yaml
@@ -40,7 +40,7 @@ services:
 
     build: ./quote_server_mock
 
-    entrypoint: go run app.go
+    entrypoint: fresh app.go
 
     ports:
       - "8000:8000"
@@ -68,7 +68,7 @@ services:
         - db:database
         - quote_server_mock:quoteserver
 
-    entrypoint: waitforit -address=tcp://database:5432 -timeout=20 -debug -- go run app.go
+    entrypoint: waitforit -address=tcp://database:5432 -timeout=20 -debug -- fresh app.go
 
     command: go run app.go
 
@@ -81,4 +81,3 @@ services:
       - DB_PORT=5432
       - QUOTE_SERVER_HOST=quoteserver
       - QUOTE_SERVER_PORT=8000
-
