Adds docker configs for redis.

--- a/src/docker-compose.yaml
+++ b/src/docker-compose.yaml
@@ -26,7 +26,13 @@ services:
 
     ports:
       - "5432:5432"
-  
+
+  redis:
+    build: ./redis
+
+    ports:
+      - "6379:6379"
+
   rabbit:
     build: ./rabbit
     
@@ -67,6 +73,7 @@ services:
     depends_on:
       - db
       - rabbit
+      - redis
 
     links:
         - db:database
