Update dockersssss files for quotecache.

--- a/src/docker-compose.yaml
+++ b/src/docker-compose.yaml
@@ -33,6 +33,9 @@ services:
     ports:
       - "6379:6379"
 
+    env_file:
+      - vars.env
+
   rabbit:
     build: ./rabbit
     
@@ -78,8 +81,9 @@ services:
     links:
         - db:database
         - quote_server_mock:quoteserver
-
-    entrypoint: waitforit -address=tcp://database:5432 -timeout=20 -debug -- waitforit -address=tcp://rabbit:5672 -timeout=20 -debug -- fresh app.go
+        - redis:redis
+  
+    entrypoint: waitforit -address=tcp://database:5432 -timeout=20 -debug -- waitforit -address=tcp://redis:6379 -timeout=20 -debug -- waitforit -address=tcp://rabbit:5672 -timeout=20 -debug -- fresh app.go
 
     command: go run app.go
 
