--- a/src/vars.env
+++ b/src/vars.env
@@ -3,6 +3,8 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=transactions
 POSTGRES_PORT=5432
+REDIS_HOST=redis
+REDIS_PORT=6379
 QUOTE_SERVER_HOST=quoteserver
 QUOTE_SERVER_PORT=8000
 TRANS_HOST=transaction
