--- a/src/vars.env
+++ b/src/vars.env
@@ -1,8 +1,11 @@
-POSTGRES_HOST=database
+TRANS_DB_HOST=transdb
+TRANS_DB_PORT=5432
+TRANS_DB=transactions
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_DB=transactions
-POSTGRES_PORT=5432
+LOG_DB_HOST=logdb
+LOG_DB_PORT=5432
+LOG_DB=logs
 REDIS_HOST=redis
 REDIS_PORT=6379
 QUOTE_SERVER_HOST=quoteserver
