--- a/src/transaction_db/Dockerfile
+++ b/src/transaction_db/Dockerfile
@@ -2,6 +2,6 @@ FROM postgres:alpine
     
 EXPOSE 5432
 COPY postgresql.conf /tmp/postgresql.conf
-COPY updateConfig.sh /docker-entrypoint-initdb.d/_updateConfig.sh
+COPY _updateConfig.sh /docker-entrypoint-initdb.d/_updateConfig.sh
 ADD init.sql /docker-entrypoint-initdb.d/
 
