--- a/src/vars.env
+++ b/src/vars.env
@@ -8,8 +8,8 @@ LOG_DB_PORT=5432
 LOG_DB=logs
 REDIS_HOST=redis
 REDIS_PORT=6379
-QUOTE_SERVER_HOST=192.168.1.152
-QUOTE_SERVER_PORT=4445
+QUOTE_SERVER_HOST=quoteserver
+QUOTE_SERVER_PORT=8000
 TRANS_HOST=transaction
 TRANS_PORT=8888
 RABBITMQ_HOST=rabbit
@@ -17,4 +17,4 @@ RABBITMQ_PORT=5672
 RABBITMQ_DEFAULT_USER=rabbit
 RABBITMQ_DEFAULT_PASS=rabbit
 RABBITMQ_DEFAULT_VHOST: "/"
-PROD=true
+PROD=false
