--- a/src/log_db/postgresql.conf
+++ b/src/log_db/postgresql.conf
@@ -60,7 +60,7 @@ listen_addresses = '*'
 					# comma-separated list of addresses;
 					# defaults to 'localhost'; use '*' for all
 					# (change requires restart)
-#port = 5432				# (change requires restart)
+port = 5432				# (change requires restart)
 max_connections = 300 			# (change requires restart)
 #superuser_reserved_connections = 3	# (change requires restart)
 #unix_socket_directories = '/var/run/postgresql'	# comma-separated list of directories
@@ -143,6 +143,7 @@ dynamic_shared_memory_type = posix	# the default is the first option
 #max_files_per_process = 1000		# min 25
 					# (change requires restart)
 #shared_preload_libraries = ''		# (change requires restart)
+"shared_preload_libraries = 'citus'"
 
 # - Cost-Based Vacuum Delay -
 
