--- a/src/vars.env
+++ b/src/vars.env
@@ -16,5 +16,7 @@ RABBITMQ_HOST=rabbit
 RABBITMQ_PORT=5672
 RABBITMQ_DEFAULT_USER=rabbit
 RABBITMQ_DEFAULT_PASS=rabbit
-RABBITMQ_DEFAULT_VHOST: "/"
+RABBITMQ_DEFAULT_VHOST:"/"
 PROD=false
+MANAGER_PORT=3000
+MANAGER_HOST=manager
