seems to be working

--- a/src/vars.env
+++ b/src/vars.env
@@ -1,5 +1,5 @@
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+PGPASSWORD=postgres
+PGUSER=postgres
 TRANS_DB_HOST=transdb
 TRANS_DB_PORT=5432
 TRANS_DB=transactions
