--- a/src/docker-compose.yaml
+++ b/src/docker-compose.yaml
@@ -8,8 +8,6 @@ services:
     volumes:
       - ./manager:/manager
     entrypoint: python -u /manager/manager.py
-    depends_on:
-      - log_db
     links:
         - log_db:logdb
     ports:
@@ -37,18 +35,32 @@ services:
       - vars.env
 
   log_db:
-    image: 'citusdata/citus:7.3.0'
+    build:
+      context: .
+      dockerfile: log_db/Dockerfile
     volumes:
       - ./log_db/init.sql:/docker-entrypoint-initdb.d/init.sql
     labels: ['com.citusdata.role=Master']
-    links:
-        - log_worker:log_worker
+    env_file:
+      - vars.env
 
   log_worker:
-    image: 'citusdata/citus:7.3.0'
+    build:
+      context: .
+      dockerfile: log_db/Dockerfile
     volumes:
       - ./log_db/init.sql:/docker-entrypoint-initdb.d/init.sql
     labels: ['com.citusdata.role=Worker']
+    env_file:
+      - vars.env
+    entrypoint: 
+      - connect-worker.sh
+      - docker-entrypoint.sh
+      - postgres
+    depends_on:
+      - manager
+      - log_db
+
 
   transaction_db:
     build: ./transaction_db
