--- a/src/log_db/Dockerfile
+++ b/src/log_db/Dockerfile
@@ -1,6 +1,11 @@
-FROM postgres:alpine
-    
-EXPOSE 5432
-COPY postgresql.conf /tmp/postgresql.conf
-COPY _updateConfig.sh /docker-entrypoint-initdb.d/_updateConfig.sh
-ADD init.sql /docker-entrypoint-initdb.d/
+FROM citusdata/citus:7.3-alpine
+
+RUN apk add --no-cache curl \
+        curl-dev \
+        libcurl
+
+COPY scripts/wait-for-it.sh /usr/local/bin/wait-for-it.sh
+RUN chmod +x /usr/local/bin/wait-for-it.sh
+
+COPY log_db/connect-worker.sh /usr/local/bin/connect-worker.sh
+RUN chmod +x /usr/local/bin/connect-worker.sh
