--- a/src/vars.env
+++ b/src/vars.env
@@ -14,6 +14,8 @@ TRANS_HOST=transaction
 TRANS_PORT=8888
 RABBITMQ_HOST=rabbit
 RABBITMQ_PORT=5672
+RABBITMQ_COORD_HOST=rabbit
+RABBITMQ_COORD_PORT=5672
 RABBITMQ_DEFAULT_USER=rabbit
 RABBITMQ_DEFAULT_PASS=rabbit
 RABBITMQ_DEFAULT_VHOST:"/"
