--- a/src/docker-compose.yaml
+++ b/src/docker-compose.yaml
@@ -155,8 +155,9 @@ services:
         - quote_server_mock:quoteserver
         - redis:redis
         - rabbit:rabbit
+        - log_db:logdb
   
-    entrypoint: waitforit -address=tcp://transdb:5432 -timeout=60 -debug -- waitforit -address=tcp://redis:6379 -timeout=60 -debug -- waitforit -address=tcp://rabbit:5672 -timeout=60 -debug -- fresh app.go
+    entrypoint: waitforit -address=tcp://transdb:5432 -timeout=60 -debug --  waitforit -address=tcp://logdb:5432 -timeout=60 -debug --  waitforit -address=tcp://redis:6379 -timeout=60 -debug -- waitforit -address=tcp://rabbit:5672 -timeout=60 -debug -- fresh app.go
 
     command: go run app.go
 
